{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 90,
  "lineage": "ab7b67c2-ede8-2c84-2aff-b88edc738983",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "sairaj-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/publicIPAddresses/sairaj-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.166.107",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "sairaj-ip",
            "resource_group_name": "sairaj-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sairaj-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/networkInterfaces/sairaj-nic1",
            "internal_domain_name_suffix": "5hg4xtfpuvxebetmpsdmgaa2gf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/publicIPAddresses/sairaj-ip",
                "subnet_id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network/subnets/sairaj-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-28-5B",
            "name": "sairaj-nic1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "sairaj-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Compute/virtualMachines/Linux-vm-1"
          },
          "dependencies": [
            "azurerm_public_ip.sairaj-pip",
            "azurerm_resource_group.sairaj-rg",
            "azurerm_subnet.sairaj-subnet",
            "azurerm_virtual_network.sairaj-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sairaj-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/networkSecurityGroups/sairaj-sg",
            "location": "centralindia",
            "name": "sairaj-sg",
            "resource_group_name": "sairaj-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sairaj-dev1-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "115.124.115.69",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sairaj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sairaj-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/networkSecurityGroups/sairaj-sg/securityRules/sairaj-dev1-rule",
            "name": "sairaj-dev1-rule",
            "network_security_group_name": "sairaj-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "sairaj-resources",
            "source_address_prefix": "115.124.115.69",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sairaj-nsg",
            "azurerm_resource_group.sairaj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "sairaj-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/publicIPAddresses/sairaj-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.166.107",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "sairaj-ip",
            "resource_group_name": "sairaj-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sairaj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sairaj-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network/subnets/sairaj-subnet",
            "name": "sairaj-subnet",
            "resource_group_name": "sairaj-resources",
            "virtual_network_name": "sairaj-network"
          },
          "dependencies": [
            "azurerm_resource_group.sairaj-rg",
            "azurerm_virtual_network.sairaj-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sairaj-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network/subnets/sairaj-subnet",
            "network_security_group_id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/networkSecurityGroups/sairaj-sg",
            "subnet_id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network/subnets/sairaj-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.sairaj-nsg",
            "azurerm_resource_group.sairaj-rg",
            "azurerm_subnet.sairaj-subnet",
            "azurerm_virtual_network.sairaj-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sairaj-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ccebcdf9-a5af-406e-926c-7c86c3001c35",
            "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network",
            "location": "centralindia",
            "name": "sairaj-network",
            "resource_group_name": "sairaj-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/virtualNetworks/sairaj-network/subnets/sairaj-subnet",
                "name": "sairaj-subnet",
                "security_group": "/subscriptions/0d9042d5-8a0b-4324-b11b-6995dd814e05/resourceGroups/sairaj-resources/providers/Microsoft.Network/networkSecurityGroups/sairaj-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.sairaj-rg"
          ]
        }
      ]
    }
  ]
}